--- a/Mail2Bug/Mail2Bug.csproj
+++ b/Mail2Bug/Mail2Bug.csproj
@@ -56,8 +56,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Exchange.WebServices, Version=14.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Exchange.WebServices.1.2\lib\Microsoft.Exchange.WebServices.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.IdentityModel.Clients.ActiveDirectory">
       <HintPath>..\packages\Microsoft.IdentityModel.Clients.ActiveDirectory.2.16.204221202\lib\net45\Microsoft.IdentityModel.Clients.ActiveDirectory.dll</HintPath>
@@ -289,6 +289,7 @@
     <Compile Include="Email\AckEmailHandler.cs" />
     <Compile Include="Email\EmailBodyProcessingUtils.cs" />
     <Compile Include="Email\EWS\ArchiverMessagePostProcessor.cs" />
+    <Compile Include="Email\EWS\NoActionMessagePostProcessor.cs" />
     <Compile Include="Email\EWS\EWSConnectionManger.cs" />
     <Compile Include="Email\EWS\EWSExtendedProperty.cs" />
     <Compile Include="Email\EWS\EWSIncomingFileAttachment.cs" />
